--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,7 @@
-.stickyPhone {
+.pt-90{
+    padding-top: 90px !important;
+}
+.stickyChat {
     position: fixed;
     border-radius: 50%;
     display: flex;
@@ -8,29 +11,20 @@
     bottom: 0;
     right: 0;
 }
-
-/* .stickyPhone {
-	background: rgba(8,83,156, 0.75);
-	width: 80px;
-    height: 80px;
-	position: fixed;
-	border-radius: 50%;
-	display: flex;
+.stickyPhone {
+    position: fixed;
+    border-radius: 50%;
+    display: flex;
     align-items: center;
     justify-content: center;
-	margin-right: 20px;
-	top: 90%;
-	right: 0;
-	-webkit-transform: translateY(-50%);
-	-ms-transform: translateY(-50%);
-	transform: translateY(-50%);
-} */
-
+    margin-right: 20px;
+    bottom: 85px;
+    right: 0;
+}
 .single_portfolio img {
     vertical-align: middle;
     border-style: none;
     width: 100%;
-    /* height: 400px; */
     object-fit: fill;
     position: relative;
 }
@@ -40,3 +34,91 @@
 .ReactFlagsSelect-module_selectBtn__19wW7 {
     color: #fff !important;
 }
+.accordWrap .btn:hover {
+    color: #fff !important;
+    background: #0b4b8a;
+}
+
+.overlay:first-of-type:after {
+    content: '';
+    position: unset !important;
+  
+}
+.input-group-prepend button {
+    z-index: unset!important;
+}
+.mobile{
+    display: none !important;
+}
+.menuHolder .search {
+    display: none;
+}
+.midBar {
+    box-shadow: 10px 10px 50px 5px #f5f5f5;
+}
+.godhbL {
+    left: 32px;
+}
+.cofBlock h4 {
+    padding: 0px 28px;
+}
+.bgTheme,.godhbL {
+    background-color: #0b4b8a !important;
+}
+.hlpcBlock:hover svg {
+    color: #fff !important;
+}
+.btn-warning {
+    background-color: #0b4b8a !important;
+    border-color: #0b4b8a !important;
+    color: #fff;
+}
+.btn-warning:hover {
+
+    color: #fff;
+}
+.ReactFlagsSelect-module_selectBtn__19wW7:after {
+    border-top: 5px solid #fff;
+}
+@media(max-width:991px){
+    .contactList > li:nth-child(n+2) {
+        margin-left: 4px;
+        display: none !important;
+    }
+    .menuHolder {
+        padding: 8px 0px!important;
+    }
+    .navHolder .toggleBar {
+        margin-left: auto !important;
+    }
+    .ReactFlagsSelect-module_selectBtn__19wW7 {
+        color: #4d4d4d !important;
+        margin-left: 8px;
+    }
+    video {
+        margin-top: 100px;
+    }
+}
+
+@media(max-width:767px){
+    .hVpuhE {
+        height: 60% !important;
+        width: 75% !important;
+    }
+    .abtHead{
+        display: none;
+    }
+    section.wsisSec {
+        margin-top: 62px;
+    }
+    .faqWrapSec{
+        margin-top: 62px;
+    }
+}
+
+@media (max-width: 576px){
+    .pt-sm-12 {
+        padding-top: 100px !important;
+    }
+}
+
