--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -2,7 +2,7 @@
   outline: none;
 }
 
-button {
+/* button {
   -webkit-appearance: none;
           appearance: none;
   -webkit-filter: drop-shadow(0 5px 5px rgba(0, 0, 0, 0.1));
@@ -14,7 +14,7 @@ button {
   border: none;
   background: #00a3c8;
   color: #fff;
-  /* border-radius: 30px; */
+  border-radius: 30px;
   text-transform: uppercase;
   box-sizing: border-box;
   padding: 15px 40px;
@@ -27,7 +27,7 @@ button:hover {
   background: #222222;
   -webkit-filter: drop-shadow(0 0 5px rgba(0, 0, 0, 0.2));
           filter: drop-shadow(0 0 5px rgba(0, 0, 0, 0.2));
-}
+} */
 
 .wrapper {
   max-width: 1335px;
@@ -178,10 +178,12 @@ font-weight: 900;
   font-size: 14px;
   display: block;
 }
-
-/* a.navbar-link.home-link.active {
-    color: #00a3c8;
-} */
+.logo img.img-fluid {
+  width: 200px;
+}
+.fwEbold {
+  font-weight: 700 !important;
+}
 @media(max-width:768px){
     header {
         position: fixed;
