--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,24 +1,15 @@
 .pt-90{
     padding-top: 90px !important;
 }
-.stickyChat {
-    position: fixed;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-right: 20px;
-    bottom: 0;
-    right: 0;
-}
+
 .stickyPhone {
     position: fixed;
     border-radius: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-right: 20px;
-    bottom: 85px;
+    margin-right: 32px;
+    bottom: 140px;
     right: 0;
 }
 .single_portfolio img {
@@ -28,9 +19,6 @@
     object-fit: fill;
     position: relative;
 }
-.filters.portfolio-filter {
-    display: none;
-}
 .ReactFlagsSelect-module_selectBtn__19wW7 {
     color: #fff !important;
 }
@@ -38,7 +26,9 @@
     color: #fff !important;
     background: #0b4b8a;
 }
-
+.contactList .ico .icn, .contactList .time .icn {
+    color: #0b4b8a!important;
+}
 .overlay:first-of-type:after {
     content: '';
     position: unset !important;
@@ -56,14 +46,23 @@
 .midBar {
     box-shadow: 10px 10px 50px 5px #f5f5f5;
 }
-.godhbL {
-    left: 32px;
-}
 .cofBlock h4 {
     padding: 0px 28px;
 }
-.bgTheme,.godhbL {
+.bgTheme {
+    background-color: #9f9f9c !important;
+}
+.bg-primary {
+    background-color: #9f9f9c !important;
+}
+.godhbL {
     background-color: #0b4b8a !important;
+    height: 80px!important;
+    width: 80px !important;
+}
+.rsc-float-button svg {
+    width: 40px !important;
+    height: 40px;
 }
 .hlpcBlock:hover svg {
     color: #fff !important;
@@ -73,12 +72,46 @@
     border-color: #0b4b8a !important;
     color: #fff;
 }
-.btn-warning:hover {
+.btn-warning:hover,h2.sc-VigVT.lifvqk.rsc-header-title {
 
     color: #fff;
 }
 .ReactFlagsSelect-module_selectBtn__19wW7:after {
-    border-top: 5px solid #fff;
+    border-top: 5px solid #fff !important;
+}
+button:focus {
+    outline: unset;
+}
+.btn-primary,.btnTheme,.btnTheme:hover,.glfuN,.hQsUiY {
+    color: #fff!important;
+    background-color: #083867 !important;
+    border-color: #083867!important;
+}
+.contact-icon {
+    filter: brightness(0.9) contrast(0.3) hue-rotate(45deg) saturate(1.5) sepia(0.3);
+}
+/* Tab */
+.portfolio_area .filters ul li {
+    display: inline-block;
+    margin-right: 50px;
+    font-size: 16px;
+    font-weight: 500;
+    text-transform: uppercase;
+    color: #222222;
+    cursor: pointer;
+    -webkit-transition: all 0.4s ease 0s;
+    -moz-transition: all 0.4s ease 0s;
+    -o-transition: all 0.4s ease 0s;
+    transition: all 0.4s ease 0s;
+}
+.portfolio_area .filters ul li:hover, .portfolio_area .filters ul li.active {
+    color: #083867;
+}
+.home-categ {
+    width: 125px !important;
+}
+aside.footerAside.position-relative.text-white.bgCover {
+    box-shadow: 0px 0px 20px 0px #d3d3d3;
 }
 @media(max-width:991px){
     .contactList > li:nth-child(n+2) {
@@ -113,6 +146,20 @@
     }
     .faqWrapSec{
         margin-top: 62px;
+    }
+    .stickyPhone img.img-fluid {
+        width: 40px;
+    }
+    .godhbL {
+        height: 40px!important;
+        width: 40px !important;
+    }
+    .rsc-float-button svg {
+        width: 22px !important;
+        height: 22px;
+    }
+    .stickyPhone {
+        bottom: 85px;
     }
 }
 
