--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -1323,7 +1323,7 @@ h5.bdrBtm:after, .h5.bdrBtm:after {
 95	 footerAside/.footerAside
 --------------------------------------------------------*/
 .footerAside .contactHolder {
-  background: rgba(17, 67, 117, 0.8); }
+  background: #0b4b8a }
   .footerAside .contactHolder .ico {
     min-width: 34px; }
 
