--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -178,6 +178,12 @@ font-weight: 900;
         background: #000000;
         z-index: 10;
       }
+      .nav-item {
+        padding: 10px;
+    }
+    a#border {
+      border: transparent;
+  }
 }
 @media (max-height: 500px) {
   .slider-wrapper, .slide {
@@ -202,8 +208,3 @@ font-weight: 900;
     font-size: 32px;
   }
 } 
-
-
-
-
-
